--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,4 +1,12 @@
 @use 'variables'
+
+html
+    @media(max-width: 1080px) 
+        font-size: 93.75%
+    
+    @media(max-width: 720px) 
+        font-size: 87.5%
+      
     
 *
     padding: 0
