Foi alterado o tamanho dos ícones das tecnologias

--- a/src/styles/components/technologiesContainer.sass
+++ b/src/styles/components/technologiesContainer.sass
@@ -11,10 +11,11 @@
 
         .technology-card
             @include mixins.center
+            align-items: center
             gap: 1rem
             padding: 1rem
-            border: 1px solid #333
             width: 45%
+            border: 1px solid #333
             border-radius: variables.$card-border-radius
 
             h3
@@ -22,7 +23,7 @@
                 margin-bottom: 1rem
 
             svg
-                font-size: 6rem
+                font-size: 3.5rem
         
         #html
             svg
