--- a/src/styles/components/maincontent.sass
+++ b/src/styles/components/maincontent.sass
@@ -10,13 +10,16 @@
     section
         display: flex
         flex-direction: column
+        color: variables.$text-color-secundary
+        margin-bottom: 1.3rem
     
     h2
-        color: variables.$text-color
-        font-size: 2.2rem
-        margin-bottom: 1.3rem
         @include mixins.center
+        font-size: 2.2rem
+        color: variables.$text-color
+        margin-bottom: 1.3rem
         justify-content: start
+        align-items: center
         gap: 1rem
 
         &:after
