--- a/src/styles/components/technologiesContainer.sass
+++ b/src/styles/components/technologiesContainer.sass
@@ -21,6 +21,7 @@
             h3
                 color: variables.$text-color
                 margin-bottom: 1rem
+                font-size: 1rem
 
             svg
                 font-size: 3.5rem
