--- a/src/styles/components/technologiesContainer.sass
+++ b/src/styles/components/technologiesContainer.sass
@@ -29,20 +29,25 @@
         #html
             svg
                 color: #E44D26
+                width: 45%
 
         #css
             svg
                 color: #1572b6
+                width: 45%
         
         #js
             svg
                 color: #f0db4f
+                width: 45%
 
         #react
             svg
                 color: #61dafb
+                width: 45%
 
         #typescript
             svg
                 color: #007acc
+                width: 45%
        
