--- a/src/styles/components/technologiesContainer.sass
+++ b/src/styles/components/technologiesContainer.sass
@@ -11,6 +11,7 @@
 
         .technology-card
             @include mixins.center
+            display: grid
             align-items: center
             gap: 1rem
             padding: 1rem
@@ -29,25 +30,22 @@
         #html
             svg
                 color: #E44D26
-                width: 45%
+               
 
         #css
             svg
                 color: #1572b6
-                width: 45%
-        
+              
         #js
             svg
                 color: #f0db4f
-                width: 45%
-
+              
         #react
             svg
                 color: #61dafb
-                width: 45%
+                
 
         #typescript
             svg
                 color: #007acc
-                width: 45%
-       
+             
