Alterando a porcentagem de responsividade

--- a/src/styles/components/informationContainer.sass
+++ b/src/styles/components/informationContainer.sass
@@ -13,6 +13,7 @@
 
     .info-card
         @include mixins.center
+        display: grid
         justify-content: start
         gap: 1rem
         padding-bottom: 0.8rem 
